@@ -23,11 +23,14 @@
         <slf4j.version>2.0.12</slf4j.version>
         <!-- Playwright -->
         <playwright.version>1.47.0</playwright.version>
+        <!--    Mocking environment    -->
+        <mockito.version>5.15.2</mockito.version>
+        <junit-pioneer.version>2.3.0</junit-pioneer.version>
         <!-- Used for test-frame -->
         <test-frame.version>0.8.0</test-frame.version>
         <log4j.version>2.24.3</log4j.version>
         <skipTests>false</skipTests>
-
+        <skipUTs>false</skipUTs>
     </properties>
 
     <dependencies>
@@ -85,6 +88,19 @@
             <artifactId>test-frame-log-collector</artifactId>
             <version>${test-frame.version}</version>
         </dependency>
+        <!--   Mocking environment     -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit-pioneer</groupId>
+            <artifactId>junit-pioneer</artifactId>
+            <version>${junit-pioneer.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!--    Logger      -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -115,6 +131,74 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire-plugin.version}</version>
+                <configuration>
+                    <skipTests>${skipUTs}</skipTests>
+                    <argLine>
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${surefire-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>system-tests</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includes>
+                        <include>**/*ST.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <executions>
+                    <!-- Attach JaCoCo agent to unit tests -->
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${project.build.directory}/jacoco-unit.exec</destFile>
+                            <append>true</append>
+                        </configuration>
+                    </execution>
+                    <!-- Generate aggregated coverage report -->
+                    <execution>
+                        <id>report-aggregate</id>
+                        <goals>
+                            <goal>report-aggregate</goal>
+                        </goals>
+                        <phase>verify</phase>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/*Builder.class</exclude>
+                                <exclude>**/*Fluent.class</exclude>
+                                <exclude>**/*Nested.class</exclude>
+                            </excludes>
+                            <includeCurrentProject>true</includeCurrentProject>
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                            <formats>
+                                <format>XML</format>
+                            </formats>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -123,23 +207,4 @@
             </resource>
         </resources>
     </build>
-
-    <profiles>
-        <profile>
-            <id>none</id>
-            <properties>
-                <skipTests>true</skipTests>
-            </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-
-        <profile>
-            <id>all</id>
-            <properties>
-                <skipTests>false</skipTests>
-            </properties>
-        </profile>
-    </profiles>
 </project>
